# codepair

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  MAINTAINING.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: commit-msg
.husky/: pre-commit
api/: backend-openapi-spec.json
assets/: index--H0TrlEF.css  index--KscNo8o.js  index-03h4D4gq.js  index-0B7fR9fo.js  index-2MnEBhMk.js  index-3pEoevdH.js  index-5nSp_ynV.js  index-63H1bryT.js  index-64pF03Ar.js  index-6jrXGWcD.js  index-87-bIJ-v.css  index-A-iW_peu.js  index-AHHzxnuD.js  index-B1bTakMw.js  index-B4lJZPbV.js  index-B9PUitHn.js  index-BO3GN4T_.js  index-BO6EUqkO.js  index-BXRnA-pL.js  index-Bb5EU686.js  index-BbGZo2uc.js  index-BkIcz8kl.js  index-BleD1luz.css  index-BoxT3vcY.js  index-BrNjBKqV.js  index-BtMGLX9_.js  index-C-VcNqKm.js  index-C0VGzDuG.js  index-C54iW5Hw.js  index-C8XVi_y-.js  index-CEagLO7m.js  index-CG5Cf6EK.css  index-CUhQCNT1.js  index-CVLkdRHu.js  index-CbMWlkZg.js  index-CdpSrlIH.js  index-CfvYkJvH.js  (+97 more)
yorkie-intelligence/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
yorkie-intelligence/src/: .env.deployment  .env.sample  main.py
yorkie-intelligence/src/api/: __init__.py
yorkie-intelligence/src/api/issue/: config.py  views.py
yorkie-intelligence/src/api/pr/: config.py  views.py
yorkie-intelligence/src/api/write_document/: __init__.py  config.py  models.py  views.py
yorkie-intelligence/src/common/: llms.py  utils.py
yorkie-intelligence/test/: test_stream_response.py
(+703 files in other folders)
