[tool.poetry]
name = "yorkie-intelligence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain = "^0.3.14"
langchain-openai = "^0.3.0"
langchain-ollama = "^0.2.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
